--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,11 +2,35 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
   <display-name>PIP</display-name>
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
-    <welcome-file>index.htm</welcome-file>
-    <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
+    <welcome-file>EmailForm.jsp</welcome-file>
   </welcome-file-list>
+  <servlet>  
+   <servlet-name>EmailSendingServlet</servlet-name>
+   <servlet-class>com.pip.Servlet.EmailSendingServlet</servlet-class>  
+   <multipart-config>
+   	 	<max-file-size>5</max-file-size>
+   	 	<max-request-size>10</max-request-size>
+   	<file-size-threshold>3</file-size-threshold>
+</multipart-config>
+  </servlet>
+  
+  <servlet-mapping>
+  <servlet-name>EmailSendingServlet</servlet-name>
+  <url-pattern>/sendEmail</url-pattern>
+  </servlet-mapping>
+  
+  <context-param>
+  	<param-name>recipients</param-name>
+  	<param-value>abc@sapient.com,xyz@gmail.com,test@test.com,roni@robni.com</param-value>
+  </context-param>
+  
+  <context-param>
+  	<param-name>host</param-name>
+  	<param-value>localhost</param-value>
+  </context-param>
+  
+  <context-param>
+  	<param-name>port</param-name>
+  	<param-value>25</param-value>
+  </context-param>
 </web-app>
