--- a/.classpath
+++ b/.classpath
@@ -14,5 +14,13 @@
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/asara3/Downloads/javax.mail.jar" sourcepath=""/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/mockito-all-1.9.5.jar/mockito-all-1.9.5.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/junit-4.12.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/cglib-nodep-2.2.2.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/easymock-3.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/javassist-3.21.0-GA.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/objenesis-2.4.jar"/>
+	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/powermock-easymock-1.6.6-full.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
