--- a/.classpath
+++ b/.classpath
@@ -1,11 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jre1.8.0_111">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.server.core.container/org.eclipse.jst.server.tomcat.runtimeTarget/Apache Tomcat v8.0">
 		<attributes>
 			<attribute name="owner.project.facets" value="jst.web"/>
@@ -13,14 +8,17 @@
 	</classpathentry>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/asara3/Downloads/javax.mail.jar" sourcepath=""/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/mockito-all-1.9.5.jar/mockito-all-1.9.5.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/hamcrest-core-1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/junit-4.12.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/cglib-nodep-2.2.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/easymock-3.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/javassist-3.21.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/objenesis-2.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/asara3/Downloads/powermock-easymock-junit-1.6.6/powermock-easymock-junit-1.6.6/powermock-easymock-1.6.6-full.jar"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/hamcrest-core-1.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/javax.mail.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/junit-4.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/cglib-nodep-2.2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/easymock-3.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/javassist-3.21.0-GA.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/junit-4.12.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/objenesis-2.4.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/powermock-easymock-junit-1.6.6/powermock-easymock-1.6.6-full.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/mockito-all-1.9.5.jar/mockito-all-1.9.5.jar"/>
+	<classpathentry exported="true" kind="lib" path="D:/Software/Jars/apache-log4j-1.2.17/log4j-1.2.17.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
